Fix application scrollbars

--- a/app/components/post-feed/post-feed.component.scss
+++ b/app/components/post-feed/post-feed.component.scss
@@ -53,7 +53,7 @@
     position: relative;
     z-index: 10;
 
-    overflow: scroll;
+    overflow-y: auto;
     flex-grow: 1;
     padding-top: 20px;
 
